# LogGuard_ML

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_TEST.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COMPLETE.py  LICENSE  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  troubleshooting_log.md
.github/workflows/: ci.yml  performance-benchmarks.yml
benchmarks/: benchmark_config.yaml
config/: config.yaml
config/backups/: config_backup_20250714_063007.yaml
config_ui/: app.py
config_ui/static/: script.js  style.css
config_ui/templates/: base.html  config.html  index.html  monitoring.html  plugins.html  reports.html
docs/: API_REFERENCE.md  ENHANCEMENT_SUMMARY.md  PLUGIN_DEVELOPMENT.md  PRODUCTION_DEPLOYMENT.md  QUICK_START.md
docs/development/: OPTIMIZATION_COMPLETION.md  OPTIMIZATION_REPORT.md
logguard_ml/: __init__.py  __version__.py  cli.py  version_manager.py
logguard_ml/core/: __init__.py  advanced_ai.py  advanced_ml.py  log_parser.py  ml_model.py  monitoring.py  observability.py  performance.py
logguard_ml/plugins/: __init__.py
logguard_ml/reports/: __init__.py  report_generator.py
logguard_ml/utils/: __init__.py  security.py  version.py
logguard_ml/web/: api.py
plugins/: advanced_ml_detectors.py  advanced_output_formats.py  example_ml_detectors.py  example_ml_detectors_metadata.yaml  example_output_formats.py  example_output_formats_metadata.yaml  ml_detectors_metadata.yaml  output_formats_metadata.yaml
reports/: __init__.py  report_generator.py
scripts/: benchmark.py  benchmark_plugins.py  benchmark_runner.py  clean.sh  setup-dev.sh  test-env.sh
tests/: test_advanced_ml.py  test_cli_extended.py  test_comprehensive.py  test_log_parser.py  test_monitoring.py  test_optimizations.py  test_plugins.py
utils/: log_parser.py  ml_model.py
